--- a/noticias.html
+++ b/noticias.html
@@ -19,7 +19,7 @@
     </header>
 
     <nav>
-        <a href="android.html" class="menu-link">Home</a>
+        <a href="index.html" class="menu-link">Home</a>
         <a href="noticias.html" class="menu-link">Notícias</a>
         <a href="faleconosco.html" class="menu-link">Fale Conosco</a>
     </nav>
