Adicionei Javascript no projeto android
Criei uma tag "img" de forma dinâmica, diretamente pelo javascript, para inserir a imagem "site em construção".

--- a/faleconosco.html
+++ b/faleconosco.html
@@ -40,5 +40,7 @@
     <footer>
         <p>Site/Projeto feito por <strong>Matheus Soares Gonçalves</strong> para o "Desafio 010" do curso de HTML5 e CSS3 do <strong><a href="https://www.cursoemvideo.com/" target="_blank">Cursoemvideo</a></strong> criado por <strong><a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a></strong></p>
     </footer>
+
+    <script src="newTag.js"></script>
 </body>
 </html>
